[gd_scene load_steps=4 format=2]

[ext_resource path="res://choice/choice_dice.gd" type="Script" id=1]
[ext_resource path="res://dice/dice.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.215686 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ChoiceDice" type="Control"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_default_cursor_shape = 2
script = ExtResource( 1 )

[node name="ColorRect" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Dice" parent="." instance=ExtResource( 2 )]
position = Vector2( 50, 50 )

[connection signal="mouse_entered" from="." to="." method="_on_ChoiceDice_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ChoiceDice_mouse_exited"]
